pracaInz/force-app/main/default/objects/Account_Relationship__c/fields/Customer_Reason__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reason__c</fullName>
    <label>Customer Reason</label>
    <type>TextArea</type>
</CustomField>