pracaInz/force-app/main/default/objects/Account_Relationship__c/fields/Customer_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Customer_Relationship__c</fullName>
    <label>Customer Relationship</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Realtionships</valueSetName>
    </valueSet>
</CustomField>