pracaInz/force-app/main/default/objects/Account_Relationship__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Suppliers</relationshipLabel>
    <relationshipName>Account_Relationships1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>