pracaInz/force-app/main/default/objects/Account_Relationship__c/fields/Supplier_Product__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If not selected, it&apos;s regard to drivers.</inlineHelpText>
    <label>Supplier Product</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>This Company Product is not related to Supplier</errorMessage>
        <filterItems>
            <field>Company_Product__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Supplier__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Company_Product__c</referenceTo>
    <relationshipLabel>Account Relationships</relationshipLabel>
    <relationshipName>Supplier_Products</relationshipName>
    <type>Lookup</type>
</CustomField>