pracaInz/force-app/main/default/objects/Account_Relationship__c/fields/Supplier_Reason__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Reason__c</fullName>
    <label>Supplier Reason</label>
    <type>TextArea</type>
</CustomField>